--- a/index.html
+++ b/index.html
@@ -29,34 +29,36 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                      <img src="img/logo.svg" alt="">
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">All Courses</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Exclusive Free Courses</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Scholarship</a>
-                      </li>
-                    </ul>
-                    <div class="d-flex">
-                        <button class="btn login px-5" type="submit">Login</button>
-                      <button class="btn registers-btn" type="submit">Register</button>
+                    <a class="navbar-brand" href="#">
+                        <img src="img/logo.svg" alt="">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">All Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Exclusive Free Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Scholarship</a>
+                            </li>
+                        </ul>
+                        <div class="d-flex">
+                            <button class="btn login px-5" type="submit">Login</button>
+                            <button class="btn registers-btn" type="submit">Register</button>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </nav>
+            </nav>
         </div>
 
         <div class="container">
@@ -66,7 +68,8 @@
                         <div class="main-header-text">
                             <div class="main-title-text wow fadeInDown" data-wow-duration="2s">
                                 <h2>Anytime, anywhere, Learn on your schedule from any device</h2>
-                                <p>We believe everyone has the capcity to be creative. <span>Educate</span> is a place where people develop their own potential.</p>
+                                <p>We believe everyone has the capcity to be creative. <span>Educate</span> is a place
+                                    where people develop their own potential.</p>
                             </div>
                             <form class="search-form d-flex wow fadeInDown" data-wow-duration="2s">
                                 <div class="input-field">
@@ -90,7 +93,7 @@
                     </div>
                     <div class="col-lg-6 d-flex">
                         <div class="header-img wow fadeInUp" data-wow-duration="2s"">
-                            <img src="img/headerImg.png" alt="">
+                            <img src=" img/headerImg.png" alt="">
                             <div class="video-btn">
                                 <a href="#0" class="play-btn">
                                     <i class="fas fa-play"></i>
@@ -422,7 +425,8 @@
                     </div>
 
                     <div class="col-xl-4 col-md-6 col-sm-10">
-                        <div class="popular-course-singleItem popular-2 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">
+                        <div class="popular-course-singleItem popular-2 wow fadeInUp" data-wow-duration="2s"
+                            data-wow-delay=".4s">
                             <div class="pop-2-bg"><img src="img/pop-2-bg.svg" alt=""></div>
                             <div class="popular-img">
                                 <img src="img/popular-2.png" alt="">
@@ -470,7 +474,8 @@
                     </div>
 
                     <div class="col-xl-4 col-md-6 col-sm-10">
-                        <div class="popular-course-singleItem pop-item-3 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".6s">
+                        <div class="popular-course-singleItem pop-item-3 wow fadeInUp" data-wow-duration="2s"
+                            data-wow-delay=".6s">
                             <div class="popular-img">
                                 <img src="img/popular-3.png" alt="">
                             </div>
@@ -517,7 +522,8 @@
                     </div>
 
                     <div class="col-xl-4 col-md-6 col-sm-10">
-                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s" data-wow-delay=".2s">
+                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s"
+                            data-wow-delay=".2s">
                             <div class="popular-img">
                                 <img src="img/popular-4.png" alt="">
                             </div>
@@ -564,7 +570,8 @@
                     </div>
 
                     <div class="col-xl-4 col-md-6 col-sm-10">
-                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s" data-wow-delay=".4s">
+                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s"
+                            data-wow-delay=".4s">
                             <div class="popular-img">
                                 <img src="img/popular-5.png" alt="">
                             </div>
@@ -611,7 +618,8 @@
                     </div>
 
                     <div class="col-xl-4 col-md-6 col-sm-10">
-                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s" data-wow-delay=".6s">
+                        <div class="popular-course-singleItem wow fadeInDown" data-wow-duration="2s"
+                            data-wow-delay=".6s">
                             <div class="popular-img">
                                 <img src="img/popular-6.png" alt="">
                             </div>
@@ -803,7 +811,8 @@
                     <div class="col-lg-6">
                         <div class="register-text">
                             <h2>Ready to Join...???</h2>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqu dolor do amet sint. Velit officia consequat</p>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqu dolor do amet sint. Velit officia
+                                consequat</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -874,10 +883,10 @@
                             <div class="download-app footer-md-item">
                                 <h5>Download App</h5>
                                 <div class="app-store-img">
-                                    <img src="img/app-store.svg" alt="">
+                                    <a href="#"><img src="img/app-store.svg" alt=""></a>
                                 </div>
                                 <div class="app-store-img">
-                                    <img src="img/play-store.svg" alt="">
+                                    <a href="#"><img src="img/play-store.svg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -897,13 +906,16 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12 text-md-center text-sm-center">
-                    <div class="payment-item d-sm-flex align-items-center justify-content-end justify-content-md-center">
+                    <div
+                        class="payment-item d-sm-flex align-items-center justify-content-end justify-content-md-center">
                         <p>Secured Payment:</p>
-                        <a href="#"><img src="img/GooglePay.svg" alt=""></a>
-                        <a href="#"><img src="img/JCB.svg" alt=""></a>
-                        <a href="#"><img src="img/Mastercard Full.svg" alt=""></a>
-                        <a href="#"><img src="img/Paypal.svg" alt=""></a>
-                        <a href="#"><img src="img/Visa Classic.svg" alt=""></a>
+                        <div class="payment-method">
+                            <a href="#"><img src="img/GooglePay.svg" alt=""></a>
+                            <a href="#"><img src="img/JCB.svg" alt=""></a>
+                            <a href="#"><img src="img/Mastercard Full.svg" alt=""></a>
+                            <a href="#"><img src="img/Paypal.svg" alt=""></a>
+                            <a href="#"><img src="img/Visa Classic.svg" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -913,7 +925,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
-    new WOW().init();
+        new WOW().init();
     </script>
     <!-- <script>
         var menuBtn = document.getElementById("menuBtn");
